--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <div>
+        <a href="https://github.com/BrandonNgu?tab=overview&from=2024-02-01&to=2024-02-21">My Github</a>
+        
+    </div>
+
+    <div class="firstClass">
+        <p1 class="firstClass"> Hello
+        </p1>
+        <img src="EE302 Drawing one.png" width="200" height="150">
+    </div>
+</body>
+</html>
