--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+        <meta name="description" content="Github page, Brandon, ECE">
     <title>Document</title>
 
     <link rel="stylesheet" href="stylesheet.css">
@@ -16,6 +17,9 @@
     <div class="firstClass">
         <p1 class="firstClass"> Hello
         </p1>
+        
+    </div>
+    <div>
         <img src="EE302 Drawing one.png" width="200" height="150">
     </div>
 </body>
