--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </p1>
         
     </div>
-    <div>
+    <div id="imageContainer">
         <img src="EE302 Drawing one.png" width="200" height="150">
     </div>
 </body>
